test/runnable/rdmd_build_only.d
// COMPILER: rdmd
// PERMUTE_ARGS:
// REQUIRED_ARGS: --build-only
void main()
{
    assert(0);
}

