test/fail_compilation/fail45.d
void main()
{
	typeof(main) O = 0;
}
